[feat] Assign products to a customer.
1. Get products assigned to a customer.
2. Removed a product from a customer.
